force-app/main/default/objects/NIM_Port__c/NIM_Port__c.object-meta.xml
<CustomObject>
    <label>NIM Port</label>
    <nameField>
        <displayFormat>NIMPort{0000}</displayFormat>
        <label>NIM Port Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>NIM Ports</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>