force-app/main/default/objects/NIM_Port__c/fields/NIMc__c.field-meta.xml
<CustomField>
    <fullName>NIMc__c</fullName>
    <description>NIM Port for Credit</description>
    <label>NIMc</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>