force-app/main/default/objects/NIM_Port__c/fields/NIMd__c.field-meta.xml
<CustomField>
    <fullName>NIMd__c</fullName>
    <description>NIM Port for Deposit</description>
    <label>NIMd</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>